# -cascade-scan

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: probes.md
src/cascade_scan/: __init__.py  _models.py  baseline.py  cli.py  engine.py  evolve.py  report.py  scorer.py
src/cascade_scan/probes/: __init__.py  data_flow.py  escalation.py  feedback_loop.py  injection.py  loop_dos.py  mcp_poisoning.py  policy_compliance.py  prompt_leak.py  rce.py  sqli.py  strategy_eval.py  tool_abuse.py  tool_chain.py  xss.py
src/cascade_scan/scenarios/: __init__.py  registry.py
tests/: test_baseline.py  test_data_flow.py  test_engine.py  test_escalation.py  test_evolve.py  test_feedback_loop.py  test_loop_dos.py  test_mcp_poisoning.py  test_policy_compliance.py  test_probes.py  test_prompt_leak.py  test_rce.py  test_report.py  test_scenario_import.py  test_scenarios.py  test_scorer.py  test_sqli.py  test_strategy_eval.py  test_tool_chain.py  test_xss.py
